--- a/search-engine-web-app/templates/base.html
+++ b/search-engine-web-app/templates/base.html
@@ -3,27 +3,49 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {# Using Bootstrap v4.6.1 #}
-    <link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='styles/custom.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/custom.css') }}">
     <title>{% block page_title %}{% endblock %} - IRWA Search Engine</title>
     {% block header %}{% endblock %}
+    <style>
+        .header-text {
+            font-size: 24px;
+        }
+
+        .gradient-text {
+            background: linear-gradient(to right, #3934db, #d66262);
+            -webkit-background-clip: text;
+            color: transparent;
+        }
+
+        .bold-rest {
+            font-weight: bold;
+            color: #3934db;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-    <div class='header text-center'>
-        <a href="/">
-            <img src="{{ url_for('static', filename='logo.png') }}" width="100" alt="UPF logo"/>
-        </a>
-        <span> IRWA Search Engine </span>
+    <!-- Center the title vertically and horizontally -->
+    <div class='header text-center' style="margin-top: 20vh;">
+        <span class="header-text">
+            <span class="gradient-text">IRWA</span> 
+            <span class="bold-rest">Search Engine for Tweets from the Russian-Ukrainian War</span>
+        </span>
     </div>
     <hr>
     <div class='content'>
-        {% block content %}
-            base
-        {% endblock %}
+        {% block content %}{% endblock %}
     </div>
+    <!-- Add space between the title and the search bar -->
+    <div style="margin-bottom: 350px;"></div>
     <hr>
     <div class='centered'> 24952 - Information Retrieval and Web Analytics</div>
+    <div class="text-center mt-3">
+        <a href="/">
+            <img src="{{ url_for('static', filename='logo.png') }}" width="100" alt="UPF logo" class="mx-auto"/>
+        </a>
+    </div>
 </div>
 </body>
 </html>
