--- a/search-engine-web-app/templates/index.html
+++ b/search-engine-web-app/templates/index.html
@@ -2,41 +2,90 @@
 {% block page_title %}{{ page_title }}{% endblock %}
 {% block content %}
     <div class="centered">
-        <form class="text-center" method="POST" onSubmit='return validate();' action="/search">
+        <form class="text-center" method="POST" onsubmit='return submitForm();' action="/search">
             <input class="form-control mb-2" name="search-query" type="search" placeholder="Search" aria-label="Search" autofocus="autofocus">
             <div class="row">
                 <div class="col">
-                    <button class="btn btn-primary" type="submit" name="search-algorithm" value="algorithm_1" onclick="showMessage('You selected the search algorithm based on a tf-idf score + cosine similarity.');">Search Algorithm I</button>
-                </div>
-                <div class="col">
-                    <button class="btn btn-secondary" type="submit" name="search-algorithm" value="algorithm_2" onclick="showMessage('You selected the search algorithm which is an expansion of the algorithm I, integrating popularity metrics.');">Search Algorithm II</button>
-                </div>
-                <div class="col">
-                    <button class="btn btn-info" type="submit" name="search-algorithm" value="algorithm_3" onclick="showMessage('You selected the search algorithm based on word2vec + cosine similarity');">Search Algorithm III</button>
+                    <div class="input-group">
+                        <select class="form-control" name="search-algorithm" id="search-algorithm">
+                            <option value="algorithm_1">Search Algorithm I</option>
+                            <option value="algorithm_2">Search Algorithm II</option>
+                            <option value="algorithm_3">Search Algorithm III</option>
+                        </select>
+                        <div class="input-group-append">
+                            <button class="btn btn-info" type="button" data-toggle="tooltip" title="" data-target="#infoModal" style="background-color: #5c5b5b; border-color: #8c8c8c;">&#9432;</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <input name="upf-irwa-hidden" type="hidden" value="123">
+            <button class="btn btn-primary mt-2" type="submit" style="background-color: #007BFF;">Search</button>
         </form>
-        <div id="message-container"></div>
-        <div id="loading-indicator" style="display: none;">
-            <!-- Add loading indicator-->
-            Loading...
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="infoModalLabel">Search Algorithm Information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Information about the selected search algorithm -->
+                    <p id="algorithm-info"></p>
+                </div>
+            </div>
         </div>
     </div>
 
     <script>
-        function showMessage(message) {
-            document.getElementById('message-container').innerHTML = '<div class="alert alert-info">' + message + '</div>';
-            
-            // Show loading indicator
-            document.getElementById('loading-indicator').style.display = 'block';
-        
-            setTimeout(function () {
-                // Hide loading indicator after a delay (simulating search completion)
-                document.getElementById('loading-indicator').style.display = 'none';
-                // Clear the message when results are shown
-                document.getElementById('message-container').innerHTML = '';
-            }, 10000000000000);  // Adjust this timeout to match your actual search time
+        $(document).ready(function () {
+            // Enable Bootstrap tooltip
+            $('[data-toggle="tooltip"]').tooltip();
+    
+            // Update the tooltip title when the user selects a different search algorithm
+            $('#search-algorithm').change(function () {
+                var selectedAlgorithm = $('#search-algorithm option:selected').text();
+                updateTooltipContent(selectedAlgorithm);
+            });
+    
+            // Set initial tooltip content based on the default selected algorithm
+            var initialAlgorithm = $('#search-algorithm option:selected').text();
+            updateTooltipContent(initialAlgorithm);
+        });
+    
+        function updateTooltipContent(algorithm) {
+            // Get the tooltip element
+            var tooltipElement = $('[data-toggle="tooltip"]');
+    
+            // Update the tooltip title based on the selected search algorithm
+            tooltipElement.attr('data-original-title', getAlgorithmInfo(algorithm));
+    
+            // Destroy and reinitialize the tooltip to apply the changes
+            tooltipElement.tooltip('dispose').tooltip();
+        }
+    
+        function getAlgorithmInfo(algorithm) {
+            // Your existing function to provide information about each search algorithm
+            switch (algorithm) {
+                case 'Search Algorithm I':
+                    return 'Search Algorithm I: tdf+cosine similarity';
+                case 'Search Algorithm II':
+                    return 'Search Algorithm II: extension of algorithm I by integrating popularity metrics ';
+                case 'Search Algorithm III':
+                    return 'Search Algorithm III: word2vec + cosine similarity';
+                default:
+                    return '';
+            }
+        }
+    
+        function submitForm() {
+            // Your existing function for form submission
+            return true;
         }
     </script>
+    
 {% endblock %}
