--- a/search-engine-web-app/templates/results.html
+++ b/search-engine-web-app/templates/results.html
@@ -11,7 +11,7 @@
                 <a href="{{ item.url }}">{{ item.title }}...</a>
             </div>
             <div class="cited">
-                <cite><a href="{{ item.url }}">{{ item.url }}</a></cite>
+                <cite><a href="{{ item.doc_stats }}">{{ item.doc_stats }}</a></cite>
             </div>
             <div class="doc-desc">
                 {{ item.doc_date }} — {{ item.description }}
