Go_back button + ip_address

--- a/search-engine-web-app/templates/dashboard.html
+++ b/search-engine-web-app/templates/dashboard.html
@@ -77,6 +77,7 @@
                 <tr>
                     <th scope="col">Visitor ID</th>
                     <th scope="col">Username</th>
+                    <th scope="col">IP Address</th>
                     <th scope="col">Country</th>
                     <th scope="col">City</th>
                     <th scope="col">Browser</th>
@@ -89,6 +90,7 @@
                     <tr>
                         <td>{{ visitor.id }}</td>
                         <td>{{ visitor.username }}</td>
+                        <td>{{ visitor.ip_address }}</td>
                         <td>{{ visitor.country }}</td>
                         <td>{{ visitor.city }}</td>
                         <td>{{ visitor.browser }}</td>
