--- a/search-engine-web-app/templates/stats.html
+++ b/search-engine-web-app/templates/stats.html
@@ -7,7 +7,7 @@
     {% for doc in clicks_data %}
         <div class="pb-3">
             <div class="">
-                <span class="text-dark"> ({{ doc.count }} visits) </span> — id: {{ doc.id }} — {{ doc.description }} - ranking {{ doc.ranking }} 
+                <span class="text-dark"> ({{ doc.count }} visits) </span> — id: {{ doc.id }} — {{ doc.description }} 
             </div>
         </div>
         <hr>
